@@ -3,6 +3,7 @@ ChangeLog
 Upcoming version
 [FEATURE] Set default sorting direction for "customranking" to "desc". Thanks to Markus Hackel. https://github.com/tpwd/ke_search/issues/279
 [BUGFIX]  Fix typo in constants.typoscript filename. Thanks to nebrot. https://github.com/tpwd/ke_search/commit/e762364111a78ea8b2378b634ca7cf77d3ae0903#r151745378
+[TASK]    Migrate usage of StandaloneView to ViewFactoryInterface. https://github.com/tpwd/ke_search/issues/249
 
 Version 6.3.0, 24 January 2025
 [FEATURE] Add support for site sets. https://github.com/tpwd/ke_search/issues/278
